coco/OESI.atg
$package=org.xeroserver.OESI
import org.xeroserver.OESI.Node.Type;

COMPILER OESI

public Node main = new Node();

public int getErrorCount(){
	return errors.count;
}

	public HashMap<Integer,String> getErrorList()
	{
		return errors.errorList;
	}
	


CHARACTERS
  letter    = 'A'..'Z' + 'a'..'z'.
  digit     = '0'..'9'.

TOKENS
  ident     = letter { letter | digit }.
  intCon    = ["-"] digit { digit }.
  realCon  = ["-"] digit {digit} '.' {digit} .
  
COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO '\n'
  
IGNORE "\t\r\n"



PRODUCTIONS

OESI					
=								
{
DEFINE	<out Node def>					(. 	main.append(def); .)
|ASSIGN <out Node ass> 					(.  main.append(ass); .)
}
.

DEFINE <out Node def>
=
"es" "gibt" ident					(.	def = new Node(t.val);	.)
";"
.

ASSIGN	<out Node ass>					(. String name = ""; .)
=
ident									(. name = t.val; .)
 "is"
 (intCon|realCon)						(. ass = new Node(Type.ASSIGN, new Node(name), new Node(Double.parseDouble(t.val))); .)
 ";"
.



END OESI.
